# Project-RC_Server

./: .gitignore  CMakeLists.txt  README.md  buildcmake.sh  core.vcproj  core.vcxproj  core.vcxproj.filters  gamed.vcproj  gamed.vcxproj  gamed.vcxproj.filters  server.sln
common/: CMakeLists.txt  Commons.h  DBC.cpp  DBC.h  Ini.cpp  Ini.h  SysLog.cpp  SysLog.h  SysLogNet.cpp  SysLogNet.h  const_def.h  distribution.cpp  distribution.h  error_def.h
common/AStarPathFinding/: AStarHelper.cpp  AStarHelper.h  Coord.cpp  Coord.h  MapAStarCompact.cpp  MapAStarCompact.h  MapConst.cpp  MapConst.h  MapLayout.cpp  MapLayout.h  MapProxy.cpp  MapProxy.h  MapTileVO.cpp  MapTileVO.h  MinHeap.h  Utils.cpp  Utils.h
common/Chat/: GameDefine_Chat.h  GameStruct_TextChat.cpp  GameStruct_TextChat.h
common/CombatStruct/: GameDefine_CombatAttr.h  GameDefine_PK.h  GameDefine_Threat.h  GameStruct_CombatAttr.cpp  GameStruct_CombatAttr.h  GameStruct_PK.cpp  GameStruct_PK.h  GameStruct_Threat.cpp  GameStruct_Threat.h
common/DBStruct/: DBStruct.cpp  DBStruct.h  DBStruct_CharList.cpp  DBStruct_CharList.h  DBStruct_City.cpp  DBStruct_City.h  DBStruct_CityCreate.cpp  DBStruct_CityCreate.h  DBStruct_Cooldown.cpp  DBStruct_Cooldown.h  DBStruct_Hero.cpp  DBStruct_Hero.h  DBStruct_Impact.cpp  DBStruct_Impact.h  DBStruct_March.cpp  DBStruct_March.h  DBStruct_PK.cpp  DBStruct_PK.h  DBStruct_RandomName.cpp  DBStruct_RandomName.h  DBStruct_Troop.cpp  DBStruct_Troop.h  DBStruct_User.cpp  DBStruct_User.h  DBStruct_WordMap.cpp  DBStruct_WordMap.h
common/DataBase/: LibMemInterface.cpp  LibMemInterface.h  ODBCBase.cpp  ODBCBase.h  ODBCInterface.cpp  ODBCInterface.h  SqlTemplate.cpp  SqlTemplate.h
common/DictionaryFormat/: DictionaryFormat.cpp  DictionaryFormat.h
common/ImpactStruct/: GameDefine_Impact.h  GameStruct_Impact.cpp  GameStruct_Impact.h
common/Login/: GameInterface_Login.cpp  GameInterface_Login.h
common/LoudSpeaker/: GameDefine_LoudSpeaker.h  GameStruct_LoudSpeaker.cpp  GameStruct_LoudSpeaker.h
common/Message/: ChatMsg.cpp  ChatMsg.h  CityMsg.cpp  CityMsg.h  DBMsg.cpp  DBMsg.h  LoginMsg.cpp  LoginMsg.h  SceneMsg.cpp  SceneMsg.h  TransportMsg.cpp  TransportMsg.h  WorldUserMsg.cpp  WorldUserMsg.h
common/Scene/: GameDefine_Obstacle.h  GameDefine_Scene.h  GameInterface_Scene.cpp  GameInterface_Scene.h  GameInterface_SceneActivation.cpp  GameInterface_SceneActivation.h  GameStruct_Obstacle.cpp  GameStruct_Obstacle.h  GameStruct_Scene.cpp  GameStruct_Scene.h
common/ServerPlayer/: ServerPlayer.cpp  ServerPlayer.h  ServerPlayerDefine.cpp  ServerPlayerDefine.h  ServerPlayerManager.cpp  ServerPlayerManager.h
common/Table/: TableManager.h  Table_ArrangeSelectTarget.cpp  Table_ArrangeSelectTarget.h  Table_Building.cpp  Table_Building.h  Table_CityBuildingDefault.cpp  Table_CityBuildingDefault.h  Table_CityBuildingLevel.cpp  Table_CityBuildingLevel.h  Table_CityBuildingSlot.cpp  Table_CityBuildingSlot.h  Table_CoolDownTime.cpp  Table_CoolDownTime.h  Table_CopyScene.cpp  Table_CopyScene.h  Table_CopySceneNpc.cpp  Table_CopySceneNpc.h  Table_CopySceneRule.cpp  Table_CopySceneRule.h  Table_Hero.cpp  Table_Hero.h  Table_Impact.cpp  Table_Impact.h  Table_InitialCombatAttr.cpp  Table_InitialCombatAttr.h  Table_NameFilter.cpp  Table_NameFilter.h  Table_NpcOptionalSkill.cpp  Table_NpcOptionalSkill.h  Table_NpcSkillStrategy.cpp  Table_NpcSkillStrategy.h  Table_PatrolPoint.cpp  Table_PatrolPoint.h  Table_PublicConfig.cpp  Table_PublicConfig.h  Table_RoleBaseAttr.cpp  Table_RoleBaseAttr.h  Table_SceneClass.cpp  Table_SceneClass.h  Table_SceneNpc.cpp  (+15 more)
common/building/: GameDefine_Building.h  GameStruct_Building.cpp  GameStruct_Building.h
common/city/: GameDefine_City.h  GameStruct_City.cpp  GameStruct_City.h
common/common/: Base.h  BaseLib.cpp  BaseLib.h  BaseType.h  BaseUtility.cpp  BaseUtility.h  BitSet.h  Clock.cpp  Clock.h  Config.cpp  Config.h  DBCTable.cpp  DBCTable.h  Exception.cpp  Exception.h  FLSeque.h  FLString.h  GuidDefine.cpp  GuidDefine.h  GuidGenerator.cpp  GuidGenerator.h  GuidLoader.cpp  GuidLoader.h  IniFile.cpp  IniFile.h  LibNetwork.cpp  LibNetwork.h  Misc.cpp  Misc.h  Pool.h  Random.cpp  Random.h  ServerConfig.cpp  ServerConfig.h  TimeManager.cpp  TimeManager.h  pool.cpp
common/hero/: GameDefine_Hero.h  GameStruct_Hero.cpp  GameStruct_Hero.h
common/json/: json_writer.cpp
common/log/: Log.cpp  Log.h  LogDefine.cpp  LogDefine.h
common/march/: GameDefine_March.h  GameStruct_March.cpp  GameStruct_March.h  MarchContainer.cpp  MarchContainer.h
common/packet/Packet/: CG_ASSIGN_HERO_PAK.h  CG_BATTLEINFOR_PAK.h  CG_BATTLEPREPARE_PAK.h  CG_BUILDING_LEVELUP_PAK.h  CG_CHAT_PAK.h  CG_Common_PAK.cpp  CG_FIGHT_PAK.h  CG_LEAVE_COPYSCENE_PAK.h  CG_MARCH_MOVE_PAK.h  CG_MOVE_PAK.h  CG_OBJPOSLIST_PAK.h  CG_REQ_NEAR_LIST_PAK.h  CG_ROBOT_OPEN_PAK.h  CG_SEND_MARCH_PAK.h  CG_SKILL_USE_PAK.h  CG_TROOP_TRAIN_PAK.h  GC_ASSIGN_HERO_PAK.h  GC_ATTACKFLY_PAK.h  GC_BATTLEEND_PAK.h  GC_BATTLEINFOR_PAK.h  (+34 more)
common/service/: BaseService.cpp  BaseService.h  Invoker.cpp  Invoker.h  Message.cpp  Message.h  MessageOp.h  Service.cpp  Service.h  ServiceCell.cpp  ServiceCell.h  ServiceDefine.h  ServiceManager.cpp  ServiceManager.h  TimeInfo.cpp  TimeInfo.h
common/skill/: GameDefine_Skill.h  GameStruct_Skill.cpp  GameStruct_Skill.h
common/troop/: GameDefine_Troop.h  GameStruct_Troop.cpp  GameStruct_Troop.h
common/user/: GameDefine_User.h
common/worldmap/: GameDefine_WorldMap.h  GameStruct_WorldMap.cpp  GameStruct_WorldMap.h
event/: Army.pb.cpp  Army.pb.h  AutoEvent_PDHead.h  CMakeLists.txt  EventDefine.h  RceAddArmy.pb.cpp  RceAddArmy.pb.h  buildproto.bat  event.pb.cpp  event.pb.h  event.proto
gamed/: AdminHandler.cpp  CMakeLists.txt  Daemon.cpp  Daemon.h  GameEventAutoCreate.cpp  GameNetHandler.cpp  GameNetHandler.h  PolicyHandler.h
gamed/event/: BaseEvent.h  MessageDef.h  ProcessWorldEvent.cpp  ProcessWorldEvent.h  RceAddArmyHandle.cpp  RceAddArmyHandle.h  SendRemoteUser.cpp  SendRemoteUser.h
(+303 files in other folders)
