# CMakeLists file

add_library(common xml/tinystr.cpp  xml/tinyxml.cpp  xml/tinyxmlerror.cpp  xml/tinyxmlparser.cpp json/json_reader.cpp json/json_value.cpp json/json_writer.cpp
coredump.cpp  counter.cpp  DBC.cpp  distribution.cpp  Ini.cpp  Log.cpp  md5.cpp  Msg2QQ.cpp  staticfile.cpp  statistics.cpp  string-util.cpp  SysLog.cpp  SysLogNet.cpp  tcrdb_win.cpp

)

