# CMakeLists file

add_library(event 
Academy.pb.cpp                 Flag.pb.cpp            QuestRule.pb.cpp            RceFriendList.pb.cpp     RceYellowNewGift.pb.cpp     RseHeartbeat.pb.cpp      SaveAttack.pb.cpp
AiAttack.pb.cpp                FriendInfoLite.pb.cpp  RceAddArmy.pb.cpp           RceGet.pb.cpp            RseAddArmy.pb.cpp           RseInit.pb.cpp           SaveBases.pb.cpp
AiAttackQueuedArmyInfo.pb.cpp  FriendInfo.pb.cpp      RceAttack.pb.cpp            RceGiftWindow.pb.cpp     RseAttack.pb.cpp            RseLoad.pb.cpp           SaveNPC.pb.cpp
AiAttackQueued.pb.cpp          LockerData.pb.cpp      RceBanLogin.pb.cpp          RceHeartbeat.pb.cpp      RseAuthState.pb.cpp         RseMineModify.pb.cpp     Stats.pb.cpp
Army.pb.cpp                    Loot.pb.cpp            RceBannersGift.pb.cpp       RceInit.pb.cpp           RseBaseBattleModify.pb.cpp  RsePurchase.pb.cpp       StoreData.pb.cpp
AttackReportEvent.pb.cpp       LootReport.pb.cpp      RceBaseBattleModify.pb.cpp  RceLoad.pb.cpp           RseBattleModify.pb.cpp      RseQuest.pb.cpp          StoreItem.pb.cpp
AttackReport.pb.cpp            MineEx.pb.cpp          RceBattleModify.pb.cpp      RceMineModify.pb.cpp     RseBuildingModify.pb.cpp    RseRes.pb.cpp            Troop.pb.cpp
BattleAlter.pb.cpp             Monsterbaiter.pb.cpp   RceBuildingModify.pb.cpp    RcePurchase.pb.cpp       RseBuildingUpdate.pb.cpp    RseSave.pb.cpp           UserLoginReport.pb.cpp
BuildingData.pb.cpp            Mushroom.pb.cpp        RceCalYellowGift.pb.cpp     RceQuest.pb.cpp          RseCredit.pb.cpp            RseTutorialStage.pb.cpp  WmStatus.pb.cpp
DataHandler.cpp                PlayerBase.pb.cpp      RceClearData.pb.cpp         RceSave.pb.cpp           RseError.pb.cpp             RseUpdateSave.pb.cpp
EventHandler.cpp               ProduceArmy.pb.cpp     RceCredit.pb.cpp            RceTutorialStage.pb.cpp  RseFightReprot.pb.cpp       RseUserData.pb.cpp
event.pb.cpp                   Purchase.pb.cpp        RceElectricPct.pb.cpp       RceUpdateSave.pb.cpp     RseFriendList.pb.cpp        RseYellowDayGift.pb.cpp
EventQueue.cpp                 Quest.pb.cpp           RceFightReprot.pb.cpp       RceYellowDayGift.pb.cpp  RseGet.pb.cpp               RseYellowNewGift.pb.cpp

)					
